infra/k8s/kafka-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-client
      port: 9092
      targetPort: 9092
    - name: kafka-controller
      port: 9093
      targetPort: 9093
    - name: kafka-external
      port: 9094
      targetPort: 9094
