infra/k8s/user-service-postgres-depl-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1"
      volumes:
        - name: user-postgres-storage
          persistentVolumeClaim:
            claimName: user-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-srv
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
